--- a/Renormalization.ipynb
+++ b/Renormalization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebooks compares two simulations: \n",
+    "This notebook compares two simulations: \n",
     "\n",
     "`i.e21.IHIST.f09_g17.CMIP6-land-hist.001_renormSMB`\n",
     "* with `glc_renormalize_smb = 'on'` \n",
